load(
    "@io_bazel_rules_closure//closure:defs.bzl",
    "closure_js_library",
    "closure_js_test",
    "closure_js_binary",
)

closure_js_library(
    name = "app",
    srcs = [
        "app.js",
    ],
    deps = [
        "@build_stack_go_github_com_bazelbuild_bazel_build_event_stream_d6b40d94//closure_js",  
        "@build_stack_go_github_com_google_protobuf_empty_6ff2474d//closure_js",  
        "@build_stack_go_github_com_googleapis_googleapis_build_events_e8a83bde//closure_js",  
        "@build_stack_go_github_com_googleapis_googleapis_publish_build_event_6215aac7//closure_js",  
        "@build_stack_go_github_com_googleapis_googleapis_publish_build_event_6215aac7//grpc_js",  
    ],
)

closure_js_library(
    name = "main",
    srcs = [
        "main.js",
    ],
    deps = [
        ":app",
        "@io_bazel_rules_closure//closure/library",
    ],
)

closure_js_binary(
    name = "bundle",
    compilation_level = "SIMPLE",
    entry_points = ["goog:cljsbes.main"],
    output_wrapper = "(function(){%output%}).call(this);",
    deps = [
        ":main",
    ],
)

